--- a/posts/about.qmd
+++ b/posts/about.qmd
@@ -1,25 +1,12 @@
 ---
-title: "about.qmd"
+title: ""
 date: today
 ---
 
 ## Quarto
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+This Quarto website is hosted with [GitHub Pages](https://pages.github.com/). Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
 
-## Running Code
+## Adding blogs
 
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
-```{r}
-1 + 1
-```
-
-You can add options to executable code like this
-
-```{r}
-#| echo: false
-2 * 2
-```
-
-The `echo: false` option disables the printing of code (only output is displayed).
+To add blogs to this Quarto website, just place your html files within the docs/ folder. 
