update .yml and .qmd

--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,12 @@
 ---
 title: "Welcome to the EMC Viroscience site!"
+listing: default
 ---
 
-This webpage hosts manuals for various bioinformatic workflows.  Here are some recent posts:
+This webpage hosts manuals for various bioinformatic workflows. Here are some recent posts:
 
-- [Illumina metagenomic pipeline](posts/my-first-post.html)
-- [Nanopore metagenomic pipeline](posts/my-second-post.html)
-- [Nanopore amplicon based pipeline](posts/fake-link.html)
+-   [Illumina metagenomic pipeline](posts/my-first-post.html)
+-   [Nanopore metagenomic pipeline](posts/my-second-post.html)
+-   [Nanopore amplicon based pipeline](posts/fake-link.html)
 
 You can also explore more posts in the sidebar.
