--- a/posts/my-first-post.qmd
+++ b/posts/my-first-post.qmd
@@ -1,6 +1,7 @@
 ---
-title: "My First Blog Post"
+title: "Example Blog Post"
+author: "Luc van Zon"
 date: 2025-03-12
 ---
 
-This is the content of my first blog post!  I can use Markdown here, like **bold text** or *italics*.
+This is the content of an example blog post!  I can use Markdown here, like **bold text** or *italics*.
