--- a/index.qmd
+++ b/index.qmd
@@ -8,4 +8,4 @@ listing:
 
 This webpage hosts manuals for various bioinformatic workflows. You can explore all posts in the sidebar.
 
-Here are some recent posts:
+Recent posts:
