--- a/posts/IMAM-01-main-page-index.qmd
+++ b/posts/IMAM-01-main-page-index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Illumina metagenomic analysis manual"
 author: "Luc van Zon"
-date: today
+date: 2025-03-13
 Reading Time: 20 min
 sidebar: id-imam
 ---
