--- a/posts/IMAM-04-assembly.qmd
+++ b/posts/IMAM-04-assembly.qmd
@@ -5,29 +5,18 @@
 We will perform de novo assembly of the host-filtered reads to create contigs (longer, assembled sequences) with [SPades](https://github.com/ablab/spades).
 
 ``` bash
-COUNT=$(cat {input.S} | wc -l)
-if [[ $COUNT -gt 0 ]]
-then
-    spades.py -t {threads} \
-    --meta \
-    -o {output} \
-    -1 {input.R1} \
-    -2 {input.R2} \
-    -s {input.S} > {log} 2>&1
-else
-    spades.py -t {threads} \
-    --meta \
-    -o {output} \
-    -1 {input.R1} \
-    -2 {input.R2} > {log} 2>&1
-fi    
+spades.py -t {threads} \
+--meta \
+-o {output} \
+-1 {input.R1} \
+-2 {input.R2} \
+-s {input.S}
 ```
 
-The `if [[ $COUNT -gt 0 ]]` condition checks if singleton reads are present. If so, we will include them with the -s option in the spades.py command
+If you do not want to include singleton reads for the assembly, then simply remove the `-s {input.S}` argument from the command. 
 
 -   `{input.R1}`, `{input.R2}` and `{input.S}` are host-filtered FASTQ files (R1, R2, and S) from **step 2.3**.
 -   `{output}` defines the directory where the assembly results will be stored.
--   `{log}` specifies the log directory.
 
 ## Renaming contigs:
 
