--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,9 @@
 ---
 title: "Welcome to the EMC Viroscience site!"
 listing:
-  type: table
-  fields: [image, date, title, author, Reading Time]
-  contents: posts/*main-page*.qmd
-sidebar: id-home
+  contents: repos/*.qmd
+  type: default
+sidebar: id-blogs
 ---
 
-This webpage hosts manuals for various bioinformatic workflows. You can explore all posts in the sidebar.
-
-Recent posts:
+This is the landing page for the [EMC Viroscience github](https://github.com/EMC-Viroscience). 
