--- a/index.qmd
+++ b/index.qmd
@@ -8,3 +8,7 @@ sidebar: id-blogs
 ---
 
 This is the landing page for the [EMC Viroscience GitHub](https://github.com/EMC-Viroscience){target="_blank"}. 
+
+# Bring it back
+
+## Woohoo!
