--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,46 @@
 ---
 title: "Welcome to the EMC Viroscience site!"
 listing:
-  contents: repos/*.qmd
-  type: grid
-  fields: [image, title, description]
+  - id: direct-links
+    contents:
+      - path: https://github.com/EMC-Viroscience/updated_illumina_workflow
+        title: "updated_illumina_workflow"
+        image: "repos/penguins.png"
+      - path: https://github.com/EMC-Viroscience/USUV_submission
+        title: "USUV_submission"
+        image: "repos/penguins.png"
+      - path: https://github.com/EMC-Viroscience/SARS-CoV-2_submission
+        title: "SARS-CoV-2_submission"
+        image: "repos/penguins.png"
+      - path: https://github.com/EMC-Viroscience/ENA-submission
+        title: "ENA-submission"
+        image: "repos/penguins.png"
+      - path: https://github.com/EMC-Viroscience/Worp_etal_Global_Sewage_Virome
+        title: "Worp_etal_Global_Sewage_Virome"
+        image: "repos/penguins.png"
+      - path: https://github.com/EMC-Viroscience/Rashidi_et_al-2024-COVID19-brain-apoptosis
+        title: "Rashidi_et_al-2024-COVID19-brain-apoptosis"
+        image: "repos/penguins.png"
+      - path: https://github.com/EMC-Viroscience/tsv2xmlParser
+        title: "tsv2xmlParser"
+        image: "repos/penguins.png"    
+    type: grid
+    fields: [image, title, description]
+  # - id: special-repos
+  #   contents: repos/*.qmd
+  #   type: grid
 sidebar: id-blogs
 ---
 
 This is the landing page for the [EMC Viroscience GitHub](https://github.com/EMC-Viroscience){target="_blank"}.
+
+## Direct links {.unnumbered .unlisted}
+
+:::{#direct-links}
+::: 
+
+<!-- ## Special repos {.unnumbered} -->
+<!-- These repositories have dedicated pages on this website.  -->
+
+<!-- :::{#special_repos} -->
+<!-- ::: -->
