--- a/posts/IMAM-02-preparation.qmd
+++ b/posts/IMAM-02-preparation.qmd
@@ -14,7 +14,7 @@ Notice the small *"Copy to Clipboard"* button on the right hand side of each cod
 
 This workflow is distributed as a self-contained Singularity container image, which includes all necessary software dependencies and helper scripts. This simplifies setup considerably. It is required that [Singularity](https://docs.sylabs.io/guides/3.5/user-guide/introduction.html){target="_blank"} version 3.x or later is available on your system. If you are working with a high performance computing (HPC) system, then this will likely already be installed and available for use. Try writing `singularity --help` in your terminal (that's connected to the HPC system) and see if the command is recognized.
 
-### 1.1.1 Download pre-built image {.unnumbered}
+## 1.2 Download pre-built image {.unnumbered}
 
 The singularity container needs an image file to activate the precompiled work environment. You can download the required workflow image file (imam_workflow.sif) directly through the terminal via:
 
@@ -24,7 +24,7 @@ wget https://github.com/LucvZon/illumina-metagenomic-analysis-manual/releases/do
 
 Or go to the [github page](https://github.com/LucvZon/illumina-metagenomic-analysis-manual/releases/tag/v1.0.1){target="_blank"} and manually download it there, then transfer it to your HPC system.
 
-### 1.1.2 Verify container {.unnumbered}
+## 1.3 Verify container {.unnumbered}
 
 You can test basic execution:
 
