--- a/posts/IMAM-02-quick_start.qmd
+++ b/posts/IMAM-02-quick_start.qmd
@@ -24,10 +24,10 @@ The workflow is distributed as a self-contained Singularity container image, whi
 Download the required workflow image file (`imam_workflow.sif`) directly through the terminal:
 
 ``` bash
-wget https://github.com/LucvZon/illumina-metagenomic-analysis-manual/releases/latest/download/imam_workflow.sif
+wget https://github.com/EMC-Viroscience/illumina-metagenomic-analysis-manual/releases/latest/download/imam_workflow.sif
 ```
 
-Or go to the [github page](https://github.com/LucvZon/illumina-metagenomic-analysis-manual/releases/latest){target="_blank"} and manually download it there, then transfer it to your HPC system.
+Or go to the [github page](https://github.com/EMC-Viroscience/illumina-metagenomic-analysis-manual/releases/latest){target="_blank"} and manually download it there, then transfer it to your HPC system.
 
 ## 1.3 Verify Container {.unnumbered}
 
@@ -43,7 +43,7 @@ singularity shell imam_workflow.sif
 
 `singularity shell imam_workflow.sif` will drop you into a shell running inside the container. The conda environment needed for this workflow is automatically active on start-up of the interactive shell. All the tools of the conda environment will therefore be ready to use.
 
-Please note that you do not have to run `conda activate {environment}` to activate the environment – everything is inside imam_workflow.sif. If you're curious about the conda environment we're using, you can check it out [here](https://github.com/LucvZon/illumina-metagenomic-analysis-manual/blob/main/envs/environment.yml){target="_blank"}
+Please note that you do not have to run `conda activate {environment}` to activate the environment – everything is inside imam_workflow.sif. If you're curious about the conda environment we're using, you can check it out [here](https://github.com/EMC-Viroscience/illumina-metagenomic-analysis-manual/blob/main/envs/environment.yml){target="_blank"}
 
 ## 1.4 Project Setup
 
@@ -70,23 +70,21 @@ singularity exec \
     -p {project.folder} \
     -n {name} \
     -r {reads} \
+    --ref-genome {reference} \
+    --diamond-db {database} \
     -t {threads}
 ```
 
 -   `{name}`: The name of your study, no spaces allowed.
 -   `{project.folder}`: The project folder where you run your workflow and store results.
 -   `{reads}`: The folder that contains your raw .fastq.gz files. Raw read files must adhere to the naming scheme as described [here](https://help.basespace.illumina.com/files-used-by-basespace/fastq-files#naming){target="_blank"}.
+-   `{reference}`: Absolute path pointing to your reference genome (.fna, .fasta, .fa).
+-   `{database}`: Absolute path pointing to your diamond database (.dmnd).
 
 ::: callout-important
 **The `--bind` arguments are needed to explicitly tell Singularity to mount the necessary host directories into the container.** The part before the colon is the path on the host machine that you want to make available. The path after the colon is the path inside the container where the host directory should be mounted.
 
 As a default, Singularity often automatically binds your home directory (`$HOME`) and the current directory (`$PWD`). We also explicitly bind `/mnt/viro0002-data` in this example. If your input files (reads, reference, databases) or output project directory reside outside these locations, you MUST add specific `--bind /host/path:/container/path` options for those locations, otherwise the container won’t be able to find them.
-:::
-
-::: callout-note
-When **prepare_project.py** prompts for the **reference genome** and **diamond database** paths, you must enter the absolute host paths, and these paths must be accessible via one of the bind mounts.
-
-Also, it'll ask if you want to create a raw_data/ folder with softlinks to your raw fastq.gz files. This is not required for running the workflow, but it can be convenient to have softlinks to your raw data available in your project directory.
 :::
 
 After running the prepare_project.py helper script, you should have the following files in your project directory:
